# Jflick-personal-site

./: README.md  _config.yml  feed.xml  gatsby-browser.js  gatsby-config.js  gatsby-node.js  index.html  index.md  package-lock.json  package.json
.claude/: voice.md
.github/workflows/: deploy-genimg.yml  deploy.yml  preview.yml
_includes/: footer.html  head-custom.html  header.html
_layouts/: home.html  post.html
_posts/: 2023-09-11-thoughts-on-technical-hiring.md  2026-02-22-the-case-for-preview-deployments.md  2026-02-28-the-intuition-gap.md  2026-03-10-ai-development-intuition.md  2026-03-11-ai-development-intuition.md  2026-03-28-openclaw-is-langchain-2.md  2026-03-28-openclaw-setup-guide.md  2026-03-28-trying-openclaw.md
assets/: main.css  main.css.map  main.scss
genimg/: Dockerfile  package.json  pyproject.toml  wrangler.toml
genimg/src/: index.js
genimg/src/genimg/: api.py  cli.py  core.py  models.py  style-prompt.md
pr-preview/pr-1/: CNAME  feed.xml  index.html
pr-preview/pr-10/: feed.xml  index.html
pr-preview/pr-11/: feed.xml  index.html
pr-preview/pr-12/: feed.xml  index.html
pr-preview/pr-12/genimg/: pyproject.toml
pr-preview/pr-12/genimg/src/genimg/: core.py
pr-preview/pr-13/: feed.xml  index.html
pr-preview/pr-2/: feed.xml  index.html
pr-preview/pr-3/: feed.xml  index.html
pr-preview/pr-4/: feed.xml  index.html
pr-preview/pr-5/: feed.xml  index.html
pr-preview/pr-6/: feed.xml  index.html
pr-preview/pr-7/: feed.xml  index.html
pr-preview/pr-8/: feed.xml  index.html
pr-preview/pr-9/: feed.xml  index.html
(+78 files in other folders)
