[project]
name = "genimg"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2",
    "typer>=0.15",
    "uvicorn>=0.34",
    "gemimg>=0.2",
]

[project.scripts]
genimg = "genimg.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genimg"]
