[project]
name = "genimg"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "pydantic",
    "typer>=0.15",
    "webtypy>=0.1.7",
]

[project.scripts]
genimg = "genimg.cli:app"

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genimg"]
